# data-engineering-zoomcamp

./: pyproject.toml
cohorts/2023/week_2_workflow_orchestration/: etl_gcs_to_bq.py  etl_gcs_to_bq_parent-deployment.yaml  etl_web_to_gcs.py  etl_web_to_gcs_github.yaml  etl_web_to_gcs_parent-deployment.yaml
cohorts/2023/week_2_workflow_orchestration/deployments/: gcs-to-bq.yaml  web-to-gcs-github-cloud.yaml  web-to-gcs-github.yaml  web-to-gcs.yaml
cohorts/2023/week_3_data_warehouse/: hw3.sql
cohorts/2023/week_4_analytics_engineering/: hw4.sql
cohorts/2023/week_4_analytics_engineering/de_dbt/: dbt_project.yml
cohorts/2023/week_4_analytics_engineering/de_dbt/macros/: get_payment_type_description.sql
cohorts/2023/week_4_analytics_engineering/de_dbt/models/core/: fact_fhv_trips.sql  fact_trips.sql
cohorts/2023/week_4_analytics_engineering/de_dbt/models/staging/: schema.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
cohorts/2023/week_5_batch_processing/: hw5.ipynb
cohorts/2023/week_6_stream_processing/: README.md  aggregator.py  consumer.py  producer.py  spark-submit.sh
week_1_basics_n_setup/2_docker_sql/: NOTES.md  homework_1.ipynb
