[tool.poetry]
name = "data-engineering-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Antonio Rodrigues <adamiaonr@gmail.com>"]
readme = "README.md"
packages = [{include = "data_engineering_zoomcamp"}]

[tool.poetry.dependencies]
python = "3.9.0"
notebook = "^6.5.2"
pandas = "^1.5.3"
numpy = "^1.24.1"
SQLAlchemy = "^2.0.0"
psycopg2-binary = "^2.9.5"
pgcli = "^3.5.0"
psycopg-binary = "^3.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
