[tool.poetry]
name = "data-engineering-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Antonio Rodrigues <adamiaonr@gmail.com>"]
readme = "README.md"
packages = [{include = "data_engineering_zoomcamp"}]

[tool.poetry.dependencies]
python = "3.9.0"
notebook = "^6.5.2"
pandas = "1.5.2"
numpy = "^1.24.1"
SQLAlchemy = "1.4.46"
psycopg2-binary = "2.9.5"
pgcli = "^3.5.0"
psycopg-binary = "^3.1.8"
prefect = "2.7.7"
prefect-sqlalchemy = "0.2.2"
prefect-gcp = {version = "0.2.4", extras = ["cloud-storage"]}
protobuf = "4.21.11"
pyarrow = "10.0.1"
pandas-gbq = "0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
